[project]
name = "jyaml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "masinc", email = "masinc000@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
]

[project.scripts]
jyaml = "jyaml:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]

