[project]
name = "jyaml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "masinc", email = "masinc000@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
]

[project.scripts]
jyaml = "jyaml:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]

[tool.mypy]
python_version = "3.12"
# strict = true  # Disabled for now, requires more type annotations
warn_return_any = true
warn_unused_configs = true
# disallow_untyped_defs = true  # Disabled for now
# disallow_any_generics = true  # Disabled for now
disallow_subclassing_any = true
# disallow_untyped_calls = true  # Disabled for now
disallow_untyped_decorators = true
disallow_incomplete_defs = true
check_untyped_defs = true
# disallow_any_unimported = true  # Disabled for now
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

