[package] 
name = "jyaml"
version = "0.4.0"
edition = "2021"
authors = ["JYAML Contributors <noreply@example.com>"]
description = "A Rust implementation of JYAML (JSON-YAML Adaptive Markup Language) - JYAML 0.4 compliant parser with flexible options and comprehensive serde integration"
documentation = "https://docs.rs/jyaml"
repository = "https://github.com/masinc/jyaml"
homepage = "https://github.com/masinc/jyaml"
license = "MIT OR Apache-2.0"
keywords = ["jyaml", "json", "yaml", "parser", "serialization"]
categories = ["parser-implementations", "encoding"]
readme = "README.md"
rust-version = "1.70"
exclude = [
    "target/",
    ".git/",
    "*.log",
    "examples/debug_tab.rs"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
pretty_assertions = "1.4"
